Added 'Click me' button back

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <h1>Git & GitHub</h1>
     <p>We are learning GitHub</p>
     <p>I don't know</p>
+
+    <button>Click me</button>
 </body>
 </html>
